--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         </p>
         <div class="flex-button-link email-area">
           <form
-            action="https://formspree.io/f/xkgbwalq"
+            action="https://formspree.io/f/mrbkzvnj"
             method="POST"
           >
             <input type="text" name="name" class="name-input email-area-item" placeholder="Nama" required>
