--- a/index.html
+++ b/index.html
@@ -34,11 +34,27 @@
       font-weight: 400;
       font-style: normal;
       font-size: 30px;
+      margin-right: auto;
+    }
+
+    .nav-container{
+      width: 400px;
+      height: auto;
+      display: flex;
+    }
+
+    .nav-item{
+      margin: auto 0;
+      font-family: "Roboto", sans-serif;
+      font-optical-sizing: auto;
+      font-weight: 400;
+      font-style: normal;
+      cursor: pointer;
     }
 
     .button-container{
       width: auto;
-      margin: 20px 20px 20px auto ;
+      margin: 20px 20px 20px 20px;
     }
 
     .button-hubungi{
@@ -47,6 +63,7 @@
       border: none;
       background-color: black;
       color: white;
+      cursor: pointer;
     }
 
     .scroll-wrapper {
@@ -69,24 +86,41 @@
     div.bagian-konsultan {
       height: 100vh;
       background-color: rgb(230, 230, 230);
+      background-image: url(https://images.unsplash.com/photo-1493612276216-ee3925520721?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+      background-position: 50% 35%;
+      background-repeat: no-repeat;
+      background-size: cover;
     }
 
     div.bagian-perijinan {
       height: 100vh;
       background-color: rgb(200, 200, 200);
+      background-image: url(https://images.unsplash.com/photo-1664887236871-56ae0728aaea?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+      background-position: center bottom;
+      background-repeat: no-repeat;
+      background-size: cover;
     }
 
     div.bagian-pembangunan {
       height: 100vh;
       background-color: rgb(170, 170, 170);
+      background-image: url(https://images.unsplash.com/photo-1601927824189-0608c01a758f?q=80&w=1937&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+      background-position: center 40%;
+      background-repeat: no-repeat;
+      background-size: cover;
+      color: white;
     }
 
     div.bagian-investasi {
       height: 100vh;
       background-color: rgb(140, 140, 140);
+      background-image: url(https://images.unsplash.com/photo-1633158829875-e5316a358c6f?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+      background-position: center 0%;
+      background-repeat: no-repeat;
+      background-size: cover;
     }
 
-    div.bagian-email {
+    div.bagian-kontak {
       height: 100vh;
       background-color: rgb(110, 110, 110);
       background-color: rgb(0, 0, 0);
@@ -117,6 +151,7 @@
       color: white;
       border-radius: 25px;
       border: none;
+      cursor: pointer;
     }
 
     .email-area{
@@ -129,13 +164,240 @@
       color: black;
       text-decoration: none;
     }
+
+
+
+  /* ========================================== */
+
+    #aboutPanel {
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 100vw;
+        height: 100vh;
+        background: white;
+        z-index: 9999;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in-out;
+        padding: 2rem;
+        box-shadow: -5px 0 10px rgba(0, 0, 0, 0.2);
+        overflow-y: auto;
+      }
+
+      #aboutPanel.show {
+        transform: translateX(0);
+      }
+
+      .close-btn {
+        margin-bottom: 1rem;
+        background: black;
+        color: white;
+        border: none;
+        padding: 0.5rem 1rem;
+        cursor: pointer;
+        border-radius: 6px;
+      }
+
+
+      label {
+        display: block;
+        margin-top: 1rem;
+      }
+
+      #aboutPanel .content {
+        max-width: 800px;
+        margin: 0 auto;
+      }
+
+
+      /* ====================================== */
+
+      #proyekPanel {
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 100vw;
+        height: 100vh;
+        background: white;
+        z-index: 9999;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in-out;
+        overflow-y: auto;
+        padding: 2rem 0;
+      }
+
+      #proyekPanel.show {
+        transform: translateX(0);
+      }
+
+      #proyekPanel .content {
+        max-width: 1000px;
+        margin: 0 auto;
+        padding: 0 1rem;
+      }
+
+      .galeri-proyek {
+        display: flex;
+        flex-direction: column;
+      }
+
+      .proyek-item {
+        background-color: #cecece;
+        margin-top: 1rem;
+        height: 200px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: bold;
+        border-radius: 8px;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      }
+
+      .close-btn {
+        margin-bottom: 1rem;
+        background: black;
+        color: white;
+        border: none;
+        padding: 0.5rem 1rem;
+        cursor: pointer;
+        border-radius: 6px;
+      }
+
+      .judul-halaman-proyek{
+        height: 18px;
+      }
+
+      .search-proyek{
+        display: flex;
+        width: 100%;
+      }
+
+      .search-input{
+        padding: 20px;
+        border-radius: 25px;
+        margin-left: auto;
+      }
+
+/* ========================================================= */
+
+      #clientPanel {
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 100vw;
+        height: 100vh;
+        background: white;
+        z-index: 9999;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in-out;
+        overflow-y: auto;
+        padding: 2rem 0;
+      }
+
+      #clientPanel.show {
+        transform: translateX(0);
+      }
+
+      #clientPanel .content {
+        max-width: 1000px;
+        margin: 0 auto;
+        padding: 0 1rem;
+      }
+
+      .client-container {
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-wrap: wrap; /* <-- Ini membuat item turun ke bawah saat tidak muat */
+        gap: 10px; /* Opsional: untuk jarak antar item */
+        justify-content: center; /* Opsional: biar center di baris baru */
+      }
+
+      .client-items{
+        width: 150px;
+        height: 150px;
+        border-radius: 10px;
+        background-color: rgb(181, 181, 181);
+      }
+
+      .feedback{
+        width: 100%;
+      }
+
+      .feedback-item{
+        width: 80%;
+        padding: 20px;
+        border: solid black 1px;
+        border-radius: 10px;
+        margin-top: 20px;
+      }
+
+      .inline-feedback{
+        display: flex;
+      }
+
+      .commentator-role{
+        color: rgb(164, 164, 164);
+      }
+
+    /* ======================================= */
+
+      #affiliatePanel {
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 100vw;
+        height: 100vh;
+        background: white;
+        z-index: 9999;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in-out;
+        overflow-y: auto;
+        padding: 2rem 0;
+      }
+
+      #affiliatePanel.show {
+        transform: translateX(0);
+      }
+
+      #affiliatePanel .content {
+        max-width: 1000px;
+        margin: 0 auto;
+        padding: 0 1rem;
+      }
+
+      .affiliate-container{
+        width: 100%;
+        display: flex;
+        gap: 10px;
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+
+      .affiliate-items{
+        width: 150px;
+        height: 150px;
+        border: solid black 1px;
+        border-radius: 10px;
+        margin-top: 20px;
+      }
+ 
   </style>
 </head>
 <body>
   <nav>
     <div class="logo-bcp">BCP</div>
+    <div class="nav-container">
+      <!--  onclick="document.getElementById('about').scrollIntoView({ behavior: 'smooth' })"  -->
+      <div class="nav-item" onclick="showAbout()">About</div>
+      <!-- onclick="document.getElementById('proyek').scrollIntoView({ behavior: 'smooth' })" -->
+      <div class="nav-item" onclick="showProyek()">Proyek</div>
+      <div class="nav-item" onclick="showClient()">Client</div>
+      <div class="nav-item" onclick="showAffiliate()">Affiliate</div>
+      <div class="nav-item" onclick="document.getElementById('artikel').scrollIntoView({ behavior: 'smooth' })">Artikel</div>
+    </div> 
     <div class="button-container">
-      <button class="button-hubungi">Hubungi Kami</button>
+      <button class="button-hubungi" onclick="document.getElementById('kontak').scrollIntoView({ behavior: 'smooth' })">Hubungi Kami</button>
     </div>
   </nav>
 
@@ -197,7 +459,7 @@
       </div>
       </div>
     </div>
-    <div class="bagian-email">
+    <div class="bagian-kontak" id="kontak">
       <div class="container-margin email-area">
         <h1>⏺ Email</h1>
         <p style="margin-bottom: 30px;">
@@ -268,5 +530,174 @@
 
   </div>
 
+
+<div id="aboutPanel" class="about-hidden">
+  <div class="content">
+    <button onclick="hideAbout()" class="close-btn">← Home</button>
+
+    <h1>About Us</h1>
+    <p>Paragraf tentang kami</p>
+
+    <iframe src="https://maps.google.com/maps?q=jakarta&t=&z=13&ie=UTF8&iwloc=&output=embed" 
+            width="100%" height="200" frameborder="0" style="border:0;" allowfullscreen></iframe>
+
+    <label>
+      Alamat:
+      <p>Jl. Sriwijaya 126, dst</p>
+    </label>
+
+    <label>
+      No HP:
+      <p>081234567890</p>
+    </label>
+
+    <label>
+      Email:
+      <p>example@gmail.com</p>
+    </label>
+  </div>
+</div>
+
+
+<div id="proyekPanel" class="proyek-hidden">
+  <div class="content">
+    <button onclick="hideProyek()" class="close-btn">← Home</button>
+
+    <div class="search-proyek">
+    <h1 class="judul-halaman-proyek">Proyek</h1>
+    <input class="search-input" placeholder="Cari proyek">
+    </div>
+
+
+      <div class="galeri-proyek">
+        <div class="proyek-item" style="background-image: url(https://images.unsplash.com/photo-1726597903345-98fa99fb4ab5?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D); background-size: cover; background-repeat: no-repeat; background-position: 50% 30%;">
+
+        </div>
+        <div class="proyek-item" style="background-image: url(https://images.unsplash.com/photo-1599490659213-e2b9527bd087?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D); background-position: center; background-size: cover; background-repeat: no-repeat;">
+        </div>
+        <div class="proyek-item" style="background-image: url(https://images.unsplash.com/photo-1441122456239-401e92b73c65?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D); background-position: center; background-repeat: no-repeat; background-size: cover;">
+        </div>
+        <div class="proyek-item">
+          <img src="https://via.placeholder.com/400x300" alt="Proyek 4">
+        </div>
+        <div class="proyek-item">
+          <img src="https://via.placeholder.com/400x300" alt="Proyek 5">
+        </div>
+      </div>
+
+  </div>
+</div>
+
+
+<div id="clientPanel" class="client-hidden">
+  <div class="content">
+    <button onclick="hideClient()" class="close-btn">← Home</button>
+
+    <h1>Client</h1>
+
+    <div class="client-container">
+      <div class="client-items"></div>
+      <div class="client-items"></div>
+      <div class="client-items"></div>
+      <div class="client-items"></div>
+      <div class="client-items"></div>
+      <div class="client-items"></div>
+      <div class="client-items"></div>
+      <div class="client-items"></div>
+      <div class="client-items"></div>
+    </div>
+
+    <h1>Penilaian Kinerja</h1>
+    <div class="feedback">
+      <div class="feedback-item">
+        <div class="inline-feedback">
+          <h1> Bpk. Muriyanto </h1><h1 class="commentator-role"> CEO PT Kerupuk Indonesia </h1><h1>⋆⋆⋆⋆⋆</h1>
+        </div>
+        <p> Berkat BCP saya dapat mengembangkan bisnis saya dan sudah membuka lebih dari 30 cabang usaha kerupuk di semarang </p>
+      </div>
+    </div>
+    <div class="feedback">
+      <div class="feedback-item">
+        <div class="inline-feedback">
+          <h1> Nurcahya Indah </h1><h1 class="commentator-role"> Admin PT Investment Berkah </h1><h1>⋆⋆⋆⋆⋆</h1>
+        </div>
+        <p> Pelayanan yang luar biasa selalu sedia memberi konsultasi dan penanaman modal investasi </p>
+      </div>
+    </div>
+    <div class="feedback">
+      <div class="feedback-item">
+        <div class="inline-feedback">
+          <h1> Dodi Wahyudi </h1><h1 class="commentator-role"> Juragan Ayam Petelur </h1><h1>⋆⋆⋆⋆⋆</h1>
+        </div>
+        <p> Dengan bantuan tenaga pembangunan BCP saya dapat mengembangkan kandang ayam lebih efektif dan berkualitas </p>
+      </div>
+    </div>
+    <div class="feedback">
+      <div class="feedback-item">
+        <div class="inline-feedback">
+          <h1> Mr. Sun Hao </h1><h1 class="commentator-role"> COO Clover Recidence </h1><h1>⋆⋆⋆⋆⋆</h1>
+        </div>
+        <p> BCP memudahkan perijinan tanah dan pembuatan dokumen untuk proyek perumahan kami </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div id="affiliatePanel" class="affiliate-hidden">
+  <div class="content">
+    <button onclick="hideAffiliate()" class="close-btn">← Home</button>
+
+    <h1>Affiliate</h1>
+
+    <div class="affiliate-container">
+      <div class="affiliate-items"></div>
+      <div class="affiliate-items"></div>
+      <div class="affiliate-items"></div>
+      <div class="affiliate-items"></div>
+      <div class="affiliate-items"></div>
+      <div class="affiliate-items"></div>
+      <div class="affiliate-items"></div>
+      <div class="affiliate-items"></div>
+    </div>
+  </div>
+</div>
+
+
+  <script>
+    function showAbout() {
+      document.getElementById("aboutPanel").classList.add("show");
+    }
+
+    function hideAbout() {
+      document.getElementById("aboutPanel").classList.remove("show");
+    }
+
+    function showProyek() {
+      document.getElementById("proyekPanel").classList.add("show");
+    }
+
+    function hideProyek() {
+      document.getElementById("proyekPanel").classList.remove("show");
+    }
+
+    function showClient() {
+      document.getElementById("clientPanel").classList.add("show");
+    }
+
+    function hideClient() {
+      document.getElementById("clientPanel").classList.remove("show");
+    }
+
+    function showAffiliate() {
+      document.getElementById("affiliatePanel").classList.add("show");
+    }
+
+    function hideAffiliate() {
+      document.getElementById("affiliatePanel").classList.remove("show");
+    }
+  </script>
+
 </body>
 </html>
+
