--- a/index.html
+++ b/index.html
@@ -9,396 +9,35 @@
   <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      overflow: hidden;
-    }
-
-    nav{
-      width: 100vw;
-      position: fixed;
-      top: 0;
-      left: 0;
-      display: flex;
-      background-color: white;
-    }
-
-    .logo-bcp{
-      width: 150px;
-      margin: 20px;
-      font-family: "Major Mono Display", monospace;
-      font-weight: 400;
-      font-style: normal;
-      font-size: 30px;
-      margin-right: auto;
-    }
-
-    .nav-container{
-      width: 400px;
-      height: auto;
-      display: flex;
-    }
-
-    .nav-item{
-      margin: auto 0;
-      font-family: "Roboto", sans-serif;
-      font-optical-sizing: auto;
-      font-weight: 400;
-      font-style: normal;
-      cursor: pointer;
-    }
-
-    .button-container{
-      width: auto;
-      margin: 20px 20px 20px 20px;
-    }
-
-    .button-hubungi{
-      padding: 10px 20px;
-      border-radius: 25px;
-      border: none;
-      background-color: black;
-      color: white;
-      cursor: pointer;
-    }
-
-    .scroll-wrapper {
-      height: 100vh;
-      width: 100vw;
-      overflow-y: scroll;
-      scroll-snap-type: y mandatory;
-      scroll-behavior: smooth;
-    }
-
-    div {
-      width: 100vw;
-      border: none;
-      overflow: hidden;
-      -webkit-overflow-scrolling: touch;
-      scroll-snap-align: start;
-      display: block;
-    }
-
-    div.bagian-konsultan {
-      height: 100vh;
-      background-color: rgb(230, 230, 230);
-      background-image: url(https://images.unsplash.com/photo-1493612276216-ee3925520721?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
-      background-position: 50% 35%;
-      background-repeat: no-repeat;
-      background-size: cover;
-    }
-
-    div.bagian-perijinan {
-      height: 100vh;
-      background-color: rgb(200, 200, 200);
-      background-image: url(https://images.unsplash.com/photo-1664887236871-56ae0728aaea?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
-      background-position: center bottom;
-      background-repeat: no-repeat;
-      background-size: cover;
-    }
-
-    div.bagian-pembangunan {
-      height: 100vh;
-      background-color: rgb(170, 170, 170);
-      background-image: url(https://images.unsplash.com/photo-1601927824189-0608c01a758f?q=80&w=1937&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
-      background-position: center 40%;
-      background-repeat: no-repeat;
-      background-size: cover;
-      color: white;
-    }
-
-    div.bagian-investasi {
-      height: 100vh;
-      background-color: rgb(140, 140, 140);
-      background-image: url(https://images.unsplash.com/photo-1633158829875-e5316a358c6f?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
-      background-position: center 0%;
-      background-repeat: no-repeat;
-      background-size: cover;
-    }
-
-    div.bagian-kontak {
-      height: 100vh;
-      background-color: rgb(110, 110, 110);
-      background-color: rgb(0, 0, 0);
-      color: white;
-    }
-
-    /* Opsional: hilangkan scrollbar tapi tetap bisa scroll */
-    .scroll-wrapper::-webkit-scrollbar {
-      display: none;
-    }
-    .scroll-wrapper {
-      -ms-overflow-style: none;  /* IE/Edge */
-      scrollbar-width: none;     /* Firefox */
-    }
-
-    .container-margin{
-      width: 90vw;
-      margin: 70px auto;
-      font-family: "Roboto", sans-serif;
-      font-optical-sizing: auto;
-      font-weight: 300;
-      font-style: normal;
-    }
-
-    .button-link{
-      padding: 10px 20px;
-      background-color: black;
-      color: white;
-      border-radius: 25px;
-      border: none;
-      cursor: pointer;
-    }
-
-    .email-area{
-      padding-bottom: 20px;
-    }
-
-    .form-email{
-      background-color: white;
-      font-weight: 500;
-      color: black;
-      text-decoration: none;
-    }
-
-
-
-  /* ========================================== */
-
-    #aboutPanel {
-        position: fixed;
-        top: 0;
-        right: 0;
-        width: 100vw;
-        height: 100vh;
-        background: white;
-        z-index: 9999;
-        transform: translateX(100%);
-        transition: transform 0.5s ease-in-out;
-        padding: 2rem;
-        box-shadow: -5px 0 10px rgba(0, 0, 0, 0.2);
-        overflow-y: auto;
-      }
-
-      #aboutPanel.show {
-        transform: translateX(0);
-      }
-
-      .close-btn {
-        margin-bottom: 1rem;
-        background: black;
-        color: white;
-        border: none;
-        padding: 0.5rem 1rem;
-        cursor: pointer;
-        border-radius: 6px;
-      }
-
-
-      label {
-        display: block;
-        margin-top: 1rem;
-      }
-
-      #aboutPanel .content {
-        max-width: 800px;
-        margin: 0 auto;
-      }
-
-
-      /* ====================================== */
-
-      #proyekPanel {
-        position: fixed;
-        top: 0;
-        right: 0;
-        width: 100vw;
-        height: 100vh;
-        background: white;
-        z-index: 9999;
-        transform: translateX(100%);
-        transition: transform 0.5s ease-in-out;
-        overflow-y: auto;
-        padding: 2rem 0;
-      }
-
-      #proyekPanel.show {
-        transform: translateX(0);
-      }
-
-      #proyekPanel .content {
-        max-width: 1000px;
-        margin: 0 auto;
-        padding: 0 1rem;
-      }
-
-      .galeri-proyek {
-        display: flex;
-        flex-direction: column;
-      }
-
-      .proyek-item {
-        background-color: #cecece;
-        margin-top: 1rem;
-        height: 200px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-weight: bold;
-        border-radius: 8px;
-        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      }
-
-      .close-btn {
-        margin-bottom: 1rem;
-        background: black;
-        color: white;
-        border: none;
-        padding: 0.5rem 1rem;
-        cursor: pointer;
-        border-radius: 6px;
-      }
-
-      .judul-halaman-proyek{
-        height: 18px;
-      }
-
-      .search-proyek{
-        display: flex;
-        width: 100%;
-      }
-
-      .search-input{
-        padding: 20px;
-        border-radius: 25px;
-        margin-left: auto;
-      }
-
-/* ========================================================= */
-
-      #clientPanel {
-        position: fixed;
-        top: 0;
-        right: 0;
-        width: 100vw;
-        height: 100vh;
-        background: white;
-        z-index: 9999;
-        transform: translateX(100%);
-        transition: transform 0.5s ease-in-out;
-        overflow-y: auto;
-        padding: 2rem 0;
-      }
-
-      #clientPanel.show {
-        transform: translateX(0);
-      }
-
-      #clientPanel .content {
-        max-width: 1000px;
-        margin: 0 auto;
-        padding: 0 1rem;
-      }
-
-      .client-container {
-        width: 100%;
-        height: auto;
-        display: flex;
-        flex-wrap: wrap; /* <-- Ini membuat item turun ke bawah saat tidak muat */
-        gap: 10px; /* Opsional: untuk jarak antar item */
-        justify-content: center; /* Opsional: biar center di baris baru */
-      }
-
-      .client-items{
-        width: 150px;
-        height: 150px;
-        border-radius: 10px;
-        background-color: rgb(181, 181, 181);
-      }
-
-      .feedback{
-        width: 100%;
-      }
-
-      .feedback-item{
-        width: 80%;
-        padding: 20px;
-        border: solid black 1px;
-        border-radius: 10px;
-        margin-top: 20px;
-      }
-
-      .inline-feedback{
-        display: flex;
-      }
-
-      .commentator-role{
-        color: rgb(164, 164, 164);
-      }
-
-    /* ======================================= */
-
-      #affiliatePanel {
-        position: fixed;
-        top: 0;
-        right: 0;
-        width: 100vw;
-        height: 100vh;
-        background: white;
-        z-index: 9999;
-        transform: translateX(100%);
-        transition: transform 0.5s ease-in-out;
-        overflow-y: auto;
-        padding: 2rem 0;
-      }
-
-      #affiliatePanel.show {
-        transform: translateX(0);
-      }
-
-      #affiliatePanel .content {
-        max-width: 1000px;
-        margin: 0 auto;
-        padding: 0 1rem;
-      }
-
-      .affiliate-container{
-        width: 100%;
-        display: flex;
-        gap: 10px;
-        flex-wrap: wrap;
-        justify-content: center;
-      }
-
-      .affiliate-items{
-        width: 150px;
-        height: 150px;
-        border: solid black 1px;
-        border-radius: 10px;
-        margin-top: 20px;
-      }
- 
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <nav>
     <div class="logo-bcp">BCP</div>
+
     <div class="nav-container">
-      <!--  onclick="document.getElementById('about').scrollIntoView({ behavior: 'smooth' })"  -->
       <div class="nav-item" onclick="showAbout()">About</div>
-      <!-- onclick="document.getElementById('proyek').scrollIntoView({ behavior: 'smooth' })" -->
       <div class="nav-item" onclick="showProyek()">Proyek</div>
       <div class="nav-item" onclick="showClient()">Client</div>
       <div class="nav-item" onclick="showAffiliate()">Affiliate</div>
       <div class="nav-item" onclick="document.getElementById('artikel').scrollIntoView({ behavior: 'smooth' })">Artikel</div>
-    </div> 
+    </div>
+
     <div class="button-container">
       <button class="button-hubungi" onclick="document.getElementById('kontak').scrollIntoView({ behavior: 'smooth' })">Hubungi Kami</button>
     </div>
+    
+    <div class="hamburger-area">
+      <div class="menu-item" onclick="showAbout()"><div class="nav-item">About</div></div>
+      <div class="menu-item" onclick="showProyek()"><div class="nav-item">Proyek</div></div>
+      <div class="menu-item" onclick="showClient()"><div class="nav-item">Client</div></div>
+      <div class="menu-item" onclick="showAffiliate()"><div class="nav-item">Affiliate</div></div>
+      <div class="menu-item" onclick="document.getElementById('artikel').scrollIntoView({ behavior: 'smooth' })"><div class="nav-item">Artikel</div></div>
+      <div class="menu-item hubungi-kami" onclick="document.getElementById('kontak').scrollIntoView({ behavior: 'smooth' }), closeMenu()"><div class="nav-item">Hubungi Kami</div></div>
+    </div>
+
+    <button class="close-menu-button" onclick="closeMenu()">✖</button>
+    <button class="open-menu-button" onclick="openMenu()">☰</button>
   </nav>
 
   <div class="scroll-wrapper">
@@ -663,41 +302,6 @@
   </div>
 </div>
 
-
-  <script>
-    function showAbout() {
-      document.getElementById("aboutPanel").classList.add("show");
-    }
-
-    function hideAbout() {
-      document.getElementById("aboutPanel").classList.remove("show");
-    }
-
-    function showProyek() {
-      document.getElementById("proyekPanel").classList.add("show");
-    }
-
-    function hideProyek() {
-      document.getElementById("proyekPanel").classList.remove("show");
-    }
-
-    function showClient() {
-      document.getElementById("clientPanel").classList.add("show");
-    }
-
-    function hideClient() {
-      document.getElementById("clientPanel").classList.remove("show");
-    }
-
-    function showAffiliate() {
-      document.getElementById("affiliatePanel").classList.add("show");
-    }
-
-    function hideAffiliate() {
-      document.getElementById("affiliatePanel").classList.remove("show");
-    }
-  </script>
-
+  <script src="script.js"></script>
 </body>
 </html>
-
